fix homepage wave gap, pet concept background; font experiment.

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -75,6 +75,10 @@ nav {
     width: 110%;
     left: -5%;
 }
+.spacer-bottom-wrapper > svg {
+    position: relative;
+    bottom: 10px;
+}
 
 .wave-wrapper {
     position: absolute;
