--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Cairo+Play:wght@200;300;400;500;600;700;800;900;1000&display=swap');
 body {
     margin: 0;
     padding: 0;
     font-size: 20px;
     overflow-x: hidden;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Cairo Play', cursive;
 }
 
 section {
